Fixed B.27 Project works properly in the modern browsers: Fixed border-collapse for table.

--- a/source/sass/blocks/options.scss
+++ b/source/sass/blocks/options.scss
@@ -15,7 +15,6 @@
 
 .options__table {
   width: 840px;
-  border-collapse: collapse;
 }
 
 .options__table td {
